--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
+    <div class="login-container">
+        <form action="">
+            <label for="">Username</label>
+            <input type="text" id="username" name="username" placeholder="Please enter your username">
+            <label for="">Password</label>
+            <input type="text" id="password" name="password" placeholder="Please enter your passsword">
+            <button id="register">Create new account</button>
+            <input type="submit" id="login" name="password" placeholder="Login">
+        </form>
+    </div>
     <script src="index.js"></script>
 </body>
+
 </html>
