--- a/public/testing/project_creation.html
+++ b/public/testing/project_creation.html
@@ -12,28 +12,34 @@
 </head>
 
 <body>
-        <h4>Hello Project Creation</h4>
-        
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#projectCreationModal">
-            Create New Project
-        </button>
+    <h4>Hello Project Creation</h4>
 
-    <div class="modal fade" id="projectCreationModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="projectCreationModalLabel" aria-hidden="true">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#projectCreationModal">
+        Create New Project
+    </button>
+
+    <!-- Q1 div -->
+    <div class="modal fade" id="projectCreationModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="projectCreationModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="projectCreationModalLabel">Project Creation</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body" id="projectCreationPrompt">
+                <div class="modal-body">
                     <form id="projectCreationForm">
-                        <label for="projectCreationResponse" class="form-label">Q1. What is the name of your Project</label>
-                        <input class="form-control" id="projectCreationResponse" type="text" placeholder="Input your response here...">
+                        <div id="projectCreationPromptContent">
+                            <label for="projectCreationResponse" class="form-label">Q1. What is the name of your
+                                Project</label>
+                            <input class="form-control" id="projectCreationResponse" type="text" name="response"
+                                value="New Project 1">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button submit" form="projectCreationForm" class="btn btn-primary">Save and Next</button>
+                    <button type="submit" form="projectCreationForm" class="btn btn-primary">Save and Next</button>
                 </div>
             </div>
         </div>
