--- a/chat/index.html
+++ b/chat/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap-grid.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Chatroom Test</title>
 </head>
 
@@ -16,35 +17,54 @@
             <input type="submit" value="Submit">
         </form>
     </div>
+
+
     <div id="memberAndMessages">
-        <div id="message_box">
-            <div class="message">
-                <span class="username">abc</span>
-                <span class="content">def</span>
-                <span class="content">ghi</span>
+
+        <div class="memberList">
+            <div class="member">
+                <div class="username">username</div>
+                <div class="image">image</div>
             </div>
-            <div class="message">
-                <span class="username">abc</span>
-                <span class="content">def</span>
-                <span class="content">ghi</span>
-            </div>
-            <div class="message">
-                <span class="username">abc</span>
-                <span class="content">def</span>
-                <span class="content">ghi</span>
-            </div>
-            <div class="message">
-                <span class="username">abc</span>
-                <span class="content">def</span>
-                <span class="content">ghi</span>
-            </div>
+
         </div>
-    </div>
-    <div id="texting_box">
-        <form id="sendMessage">
-            <input type="text" name="text_content" id="text_content" placeholder="text something">
-            <input type="submit" value="Submit">
-        </form>
+
+
+        <div class="messageList">
+
+            <div id="message_box">
+                <div class="message">
+                    <span class="username">abc</span>
+                    <span class="content">def</span>
+                    <span class="content">ghi</span>
+                </div>
+                <div class="message">
+                    <span class="username">abc</span>
+                    <span class="content">def</span>
+                    <span class="content">ghi</span>
+                </div>
+                <div class="message">
+                    <span class="username">abc</span>
+                    <span class="content">def</span>
+                    <span class="content">ghi</span>
+                </div>
+                <div class="message">
+                    <span class="username">abc</span>
+                    <span class="content">def</span>
+                    <span class="content">ghi</span>
+                </div>
+            </div>
+
+
+            <div id="texting_box">
+                <form id="sendMessage">
+                    <input type="text" name="text_content" id="text_content" placeholder="text something">
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+
+        </div>
+
     </div>
 
     <script src="index.js"></script>
