project creation form js and html done, still need debug

--- a/public/testing/project_creation.html
+++ b/public/testing/project_creation.html
@@ -31,7 +31,7 @@
                     <form id="projectCreationForm">
                         <div id="projectCreationPromptContent">
                             <label for="projectCreationResponse" class="form-label">Q1. What is the name of your
-                                Project</label>
+                                Project??</label>
                             <input class="form-control" id="projectCreationResponse" type="text" name="response"
                                 value="New Project 1">
                         </div>
