--- a/public/mainPage/mainPage.html
+++ b/public/mainPage/mainPage.html
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="personal-area">
-            <img src="../uploads/profile-image/mydog.jpg" alt="" id="user-profile">
+            <img src="../../uploads/profile-image/mydog.jpg" alt="" id="user-profile">
             <div class="username">Username</div>
             <button class="setting">Setting</button>            
         </div>
