--- a/public/Project Page/projectPage.html
+++ b/public/Project Page/projectPage.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
     <link rel="stylesheet" href="projectPage.css">
+    <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" 
+    type="text/css"> 
+<script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script>
 </head>
 <body>
     <nav>
@@ -14,18 +17,7 @@
     </nav>
 
     <div class="container">
-        <div class="task-list-container">
-            <h2>Task List</h2>
-            <div class="task-container">
-                <div class="task">task1</div>
-                <div class="task">task2</div>
-                <div class="task">task3</div>
-                <div class="task">task4</div>
-            </div>
-            <button class="create-task">Create New Task</button>
-        </div>
-
-        <div class="project-graph">diu nei lo mo dim nan zou</div>
+        <div id="gantt_here" style='width:100%; height:100%;'></div>
     </div>
 <script src="projectPage.js"></script>
 </body>
