--- a/chat/index.html
+++ b/chat/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap-grid.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap-grid.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Chatroom Test</title>
 </head>
 
@@ -21,45 +22,54 @@
 
     <div id="memberAndMessages">
 
-        <div class="memberList">
+        <div id="member-list">
+            <div class="list-title">
+                <div>Teammates</div>
+            </div>
             <div class="member">
                 <div class="username">username</div>
-                <div class="image">image</div>
+                <div class="image-cropper">
+                    <img src="01.jpg" class="profilePic" alt="karina">
+                </div>
             </div>
-
+            <div class="member">
+                <div class="username">username</div>
+                <div class="image-cropper">
+                    <img src="01.jpg" class="profilePic" alt="karina">
+                </div>
+            </div>
+            <div class="member">
+                <div class="username">username</div>
+                <div class="image-cropper">
+                    <img src="01.jpg" class="profilePic">
+                </div>
+            </div>
         </div>
 
 
-        <div class="messageList">
+        <div id="messageList">
 
-            <div id="message_box">
-                <div class="message">
-                    <span class="username">abc</span>
-                    <span class="content">def</span>
-                    <span class="content">ghi</span>
+            <div id="message-box">
+                <div class="displayCreatedDate">
+                    <div>2024-04-16</div>
                 </div>
                 <div class="message">
-                    <span class="username">abc</span>
-                    <span class="content">def</span>
-                    <span class="content">ghi</span>
+                    <span class="username">user 1</span>
+                    <span class="content">message bbbbbbbbbbbbbbbbbb</span>
+                    <span class="create-time">13:06</span>
                 </div>
-                <div class="message">
-                    <span class="username">abc</span>
-                    <span class="content">def</span>
-                    <span class="content">ghi</span>
-                </div>
-                <div class="message">
-                    <span class="username">abc</span>
-                    <span class="content">def</span>
-                    <span class="content">ghi</span>
+                <div class="message myMessage">
+                    <span class="content">message ccccccccccccc</span>
+                    <span class="create-time">13:08</span>
                 </div>
             </div>
 
 
-            <div id="texting_box">
+            <div id="texting-box">
                 <form id="sendMessage">
-                    <input type="text" name="text_content" id="text_content" placeholder="text something">
-                    <input type="submit" value="Submit">
+                    <input type="text" name="text_content" id="text-content" placeholder="text something">
+                    <!-- <input type="submit" value="Send"> -->
+                    <button id="text-send">Send</button>
                 </form>
             </div>
 
@@ -67,6 +77,7 @@
 
     </div>
 
+    <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
 </body>
 
