update file location

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
             <button id="register">Create new account</button>
         </form>
     </div>
+
+    <div>
+        <button id="register">Create new account</button>
+    </div>
     <script src="index.js"></script>
 </body>
 
