--- a/chat/index.html
+++ b/chat/index.html
@@ -8,46 +8,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap-grid.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Chatroom Test</title>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Quicksand:wght@300..700&display=swap"
+        rel="stylesheet">
+
+
 </head>
 
 <body>
     <div class="login-area">
         <form id="login">
-            <input type="text" name="username" id="username" placeholder="username" value="Gaston">
-            <input type="password" name="password" id="password" placeholder="password" value="uF4#%.*!Y">
-            <input type="submit" value="Submit">
+            <input type="text" name="username" id="username" placeholder="username" value="Frasco">
+            <input type="password" name="password" id="password" placeholder="password" value='tG4"g$~8uq~&E1d'>
+            <input type="submit" value="Submit"> test user 1
+            <br>
+        </form>
+        <form id="login1">
+            <input type="text" name="username" id="username1" placeholder="username" value="Archer">
+            <input type="password" name="password" id="password1" placeholder="password" value='pL2|hge?'>
+            <input type="submit" value="Submit"> test user 2
+            <br>
         </form>
     </div>
 
 
     <div id="memberAndMessages">
-
-        <div id="member-list">
+        <div id="member-area">
             <div class="list-title">
                 <div>Teammates</div>
             </div>
-            <div class="member">
-                <div class="username">username</div>
-                <div class="image-cropper">
-                    <img src="01.jpg" class="profilePic" alt="karina">
-                </div>
-            </div>
-            <div class="member">
-                <div class="username">username</div>
-                <div class="image-cropper">
-                    <img src="01.jpg" class="profilePic" alt="karina">
-                </div>
-            </div>
-            <div class="member">
-                <div class="username">username</div>
-                <div class="image-cropper">
-                    <img src="01.jpg" class="profilePic">
+            <div id="member-list">
+                <div class="member">
+                    <div class="username">username</div>
+                    <div class="image-cropper">
+                        <img src="01.jpg" class="profilePic" alt="karina">
+                    </div>
                 </div>
             </div>
         </div>
 
 
-        <div id="messageList">
+        <div id="message-list">
 
             <div id="message-box">
                 <div class="displayCreatedDate">
@@ -61,15 +66,17 @@
                 <div class="message myMessage">
                     <span class="content">message ccccccccccccc</span>
                     <span class="create-time">13:08</span>
+                    <button class="edit-content">Edit</button>
                 </div>
             </div>
 
 
             <div id="texting-box">
                 <form id="sendMessage">
-                    <input type="text" name="text_content" id="text-content" placeholder="text something">
+                    <input type="text" name="text_content" id="text-content" class="text-content"
+                        placeholder="text something">
                     <!-- <input type="submit" value="Send"> -->
-                    <button id="text-send">Send</button>
+                    <button id="text-send" type="submit">Send</button>
                 </form>
             </div>
 
