cm change chatroom path

--- a/public/chatPage/index.html
+++ b/public/chatPage/index.html
@@ -38,16 +38,26 @@
 
     <div id="memberAndMessages">
         <div id="member-area">
-            <div class="list-title">
+
+            <div class="list-title white-word">
                 <div>Teammates</div>
             </div>
-            <div id="member-list">
+
+            <div id="member-list" class="white-word">
+
                 <div class="member">
                     <div class="username">username</div>
                     <div class="image-cropper">
                         <img src="01.jpg" class="profilePic" alt="karina">
                     </div>
                 </div>
+                <div class="member">
+                    <div class="username">username</div>
+                    <div class="image-cropper">
+                        <img src="/profile-image/mydog.jpg" class="profilePic" alt="karina">
+                    </div>
+                </div>
+
             </div>
         </div>
 
