cm change project get path

--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link rel="stylesheet" href="mainPage.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <nav>
@@ -30,6 +30,6 @@
         <div class="completed-project">Completed Project 3</div>
     </div>
 
-    <script src="mainPage.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
