--- a/public/ProjectPage/index.html
+++ b/public/ProjectPage/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
-    <link rel="stylesheet" href="projectPage.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" 
     type="text/css"> 
 <script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script>
@@ -22,7 +22,7 @@
         <div id="gantt_here" style='width:100%; height:100%;'></div>
     </div>
 
-    <script src="projectPage.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
