--- a/public/index.html
+++ b/public/index.html
@@ -26,20 +26,12 @@
         <form id="user-registration">
             <h4>New User</h4>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" value="user@gmail.com" required>
+            <input type="email" id="new-email" name="email" value="user@gmail.com" required>
 
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" value="user" required>
+            <input type="text" id="new-username" name="username" value="user" required>
 
-<!-- 
-            <label for="password1">Password</label>
-            <input type="text" id="password1" name="password" value="1234" required>
-
-            <label for="password2">Re-enter password</label>
-            <input type="text" id="password2" name="password2" value="1234" required>
- -->
-
-            <button type="submit" id="register">Create New Account</button>
+            <button type="submit" id="create-new-account-button">Create New Account</button>
         </form>
     </div>
 
