social login - Google backend done

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
         </form>
     </div>
 
+    <div class="social-login-container">
+        <button onclick='window.location.href="/connect/google"' id="google-login" >Google Login</button>
+    </div>
+
     <div class="register-container">
         <form id="user-registration">
             <h4>New User</h4>
