--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -8,6 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Quicksand:wght@300..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,9 +21,9 @@
 
         <div id="main-page-area">
 
-            <div id="top-bar" class="row">
+            <div id="top-bar" class="row white-word">
                 <div id="and-then-logo" class="col-2">LOGO</div>
-                <div id="notification" class="col-8"></div>
+                <div id="notification" class="col-8">Notification / Hello user, welcome back ;]</div>
                 <button type="button" id="logout-btn" class="col-2">logout</button>
             </div>
 
@@ -27,11 +33,13 @@
             <div class="logout">Logout</div>
         </nav> -->
 
-            <div class="user-project-area row">
+            <div class="user-project-area">
 
-                <div class="personal-area col-2">
+                <div class="personal-area">
                     <div class="user-content">
-                        <img src="/profile-image/mydog.jpg" alt="" id="user-profile">
+                        <div class="image-cropper">
+                            <img src="/profile-image/mydog.jpg" alt="" id="user-profile">
+                        </div>
                         <div class="username">Username</div>
                         <div class="project-count">You are now handling xx projects</div>
                         <div class="completed-project-count">You have completed xx projects</div>
@@ -44,7 +52,7 @@
                 </div>
 
 
-                <div class="project-area col-8">
+                <div class="project-area">
 
                     <div class="create-project">
                         <div class="project-name">Create new project</div>
@@ -103,7 +111,7 @@
                 </div>
 
 
-                <div class="completed-project-area col-2">
+                <div class="completed-project-area">
                     <div class="completed-project">
                         <div class="completed-project-name">Completed Project 1</div>
                         <div class="completed-project-date">2024-01-01</div>
