--- a/public/ProjectPage/index.html
+++ b/public/ProjectPage/index.html
@@ -12,17 +12,23 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="border">
         <div class="main-page">Main Page</div>
         <div class="noti">Notification</div>
         <div class="logout">Logout</div>
     </nav>
 
-    <div class="container">
+    <div class="container border">
         <div id="gantt_here" style='width:100%; height:100%;'></div>
     </div>
 
-    <script src="index.js"></script>
+    <div class="jira border">
+        <div class="to-do-list border"></div>
+        <div class="ongoing border"></div>
+        <div class="finished border"></div>
+    </div>
+
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
