--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>User Login</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -53,7 +54,9 @@
                     </form>
                 </div>
                 <div class="modal-body p-5 pt-0">
-                    <p>Or sign in with</p>
+                    <button type="button" class="btn btn-outline-primary" onclick='window.location.href="/connect/google"' id="google-login">
+                        <i class="bi bi-google">&nbsp Login with Google</i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -84,13 +87,13 @@
                         <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit" id="create-new-account-button">Create New Account</button>
                     </form>
                 </div>
+                <div class="modal-body p-5 pt-0">
+                    <button type="button" class="btn btn-outline-primary" onclick='window.location.href="/connect/google"' id="google-login">
+                        <i class="bi bi-google">&nbsp Sign-up with Google</i>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-
-
-    <div class="social-login-container">
-        <button onclick='window.location.href="/connect/google"' id="google-login" >Google Login</button>
     </div>
 
     <script type="module" src="index.js"></script>
