--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -55,8 +55,10 @@
                 <div class="project-area">
 
                     <div class="create-project">
-                        <div class="project-name">Create new project</div>
-                        <img src="/profile-image/mydog.jpg" alt="" class="create-project-image">
+                        <div class="project-name white-word">Create project</div>
+                        <div class="center-image">
+                            <img src="./create_project.png" alt="" class="create-project-image">
+                        </div>
                     </div>
 
                     <!-- <div class="real-project"> -->
