--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -114,7 +114,7 @@
 
 
                 <div class="completed-project-area">
-                    <div class="completed-project">
+                    <!-- <div class="completed-project">
                         <div class="completed-project-name">Completed Project 1</div>
                         <div class="completed-project-date">2024-01-01</div>
                     </div>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="completed-project">
                         <div class="completed-project-name">Completed Project 3</div>
-                        <div class="completed-project-date">2024-01-01</div>
+                        <div class="completed-project-date">2024-01-01</div> -->
                     </div>
                 </div>
 
