--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -62,15 +62,16 @@
                     </div>
 
 
-
-                    <div class="project">
-                        <img src="/profile-image/mydog.jpg" alt="" class="project-image">
-                        <button class="edit-project-image">btn</button>
-                        <div class="project-name">Project 1</div>
-                        <div class="current-task">Task 1</div>
-                        <div class="current-task">Task 2</div>
-                        <div class="current-task">Task 3</div>
-                        <div class="current-task">Task 4</div>
+                    <div class="project-box">
+                        <div class="project">
+                            <img src="/profile-image/mydog.jpg" alt="" class="project-image">
+                            <button class="edit-project-image">btn</button>
+                            <div class="project-name">Project 1</div>
+                            <div class="current-task">Task 1</div>
+                            <div class="current-task">Task 2</div>
+                            <div class="current-task">Task 3</div>
+                            <div class="current-task">Task 4</div>
+                        </div>
                     </div>
 
                     <div class="project">
@@ -125,12 +126,12 @@
                     <div class="completed-project">
                         <div class="completed-project-name">Completed Project 3</div>
                         <div class="completed-project-date">2024-01-01</div> -->
-                    </div>
                 </div>
-
             </div>
 
         </div>
+
+    </div>
 
     </div>
 
