--- a/public/ProjectPage/index.html
+++ b/public/ProjectPage/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" 
-    type="text/css"> 
-<script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script>
+    <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" type="text/css">
+    <script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script>
 </head>
 
 <body>
@@ -23,9 +22,32 @@
     </div>
 
     <div class="jira border">
-        <div class="to-do-list border"></div>
-        <div class="ongoing border"></div>
-        <div class="finished border"></div>
+        <div class="to-do-list border task_list">
+            <div class="task border">
+                <div class="task-name">task1</div>
+                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
+            </div>
+            <div class="task border">
+                <div class="task-name">task1</div>
+                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
+            </div>
+            <div class="task border">
+                <div class="task-name">task1</div>
+                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
+            </div>
+            <div class="task border">
+                <div class="task-name">task1</div>
+                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
+            </div>
+            <div class="task border">
+                <div class="task-name">task1</div>
+                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
+            </div>
+
+
+        </div>
+        <div class="ongoing border">OnGoing</div>
+        <div class="finished border">Finished</div>
     </div>
 
     <script type="module" src="index.js"></script>
