--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,10 @@
         </div>
     </div>
 
+    <div class="temp"></div>
+
     <script type="module" src="index.js"></script>
+    <script src="../utils/profileImage/src/profile-image.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
