cm mainpage frontend color

--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -19,23 +19,24 @@
 <body>
     <div id="main-page-background">
 
-        <div id="main-page-area">
+        <main id="main-page-area">
 
-            <div id="top-bar" class="row white-word">
+            <nav id="top-bar" class="row white-word">
                 <div id="and-then-logo" class="col-2">LOGO</div>
                 <div id="notification" class="col-8">Notification / Hello user, welcome back ;]</div>
                 <button type="button" id="logout-btn" class="col-2">logout</button>
-            </div>
+            </nav>
 
             <!-- <nav>
             <div class="main-page">Main Page</div>
             <div class="noti">Notification</div>
             <div class="logout">Logout</div>
-        </nav> -->
+            </nav> -->
 
-            <div class="user-project-area">
+            <article class="user-project-area">
 
-                <div class="personal-area">
+                <section class="personal-area">
+
                     <div class="user-content">
                         <div class="image-cropper">
                             <img src="/profile-image/mydog.jpg" alt="" id="user-profile">
@@ -49,10 +50,10 @@
                         <button class="edit-profile">Edit profile</button>
                     </div>
 
-                </div>
+                </section>
 
 
-                <div class="project-area">
+                <section class="project-area">
 
                     <div class="create-project">
                         <div class="project-name white-word">Create project</div>
@@ -111,10 +112,10 @@
 
                     <!-- </div> -->
 
-                </div>
+                </section>
 
 
-                <div class="completed-project-area">
+                <section class="completed-project-area">
                     <!-- <div class="completed-project">
                         <div class="completed-project-name">Completed Project 1</div>
                         <div class="completed-project-date">2024-01-01</div>
@@ -126,10 +127,10 @@
                     <div class="completed-project">
                         <div class="completed-project-name">Completed Project 3</div>
                         <div class="completed-project-date">2024-01-01</div> -->
-                </div>
-            </div>
+                </section>
+            </article>
 
-        </div>
+        </main>
 
     </div>
 
