display task list done

--- a/public/ProjectPage/index.html
+++ b/public/ProjectPage/index.html
@@ -23,31 +23,14 @@
 
     <div class="jira border">
         <div class="to-do-list border task_list">
-            <div class="task border">
-                <div class="task-name">task1</div>
-                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
-            </div>
-            <div class="task border">
-                <div class="task-name">task1</div>
-                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
-            </div>
-            <div class="task border">
-                <div class="task-name">task1</div>
-                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
-            </div>
-            <div class="task border">
-                <div class="task-name">task1</div>
-                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
-            </div>
-            <div class="task border">
-                <div class="task-name">task1</div>
-                <div class="involved-person"><img src="../../uploads/profile-image/01.jpg" alt=""></div>
-            </div>
-
-
+            <h4>To Do List</h4>
         </div>
-        <div class="ongoing border">OnGoing</div>
-        <div class="finished border">Finished</div>
+        <div class="ongoing border">
+            <h4>Ongoing</h4>
+        </div>
+        <div class="finished border">
+            <h4>Finished</h4>
+        </div>
     </div>
 
     <script type="module" src="index.js"></script>
