--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="modal fade" id="signInModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content rounded-4 shadow">
                 <div class="modal-header p-5 pb-4 border-bottom-0">
                     <h1 class="fw-bold mb-0 fs-2" id="signInModalLabel">User Login</h1>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="modal fade" id="registerModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content rounded-4 shadow">
     
                 <div class="modal-header p-5 pb-4 border-bottom-0">
@@ -96,7 +96,7 @@
         </div>
     </div>
 
-    <div class="temp"></div>
+    <!-- <div class="temp"></div> -->
 
     <script type="module" src="index.js"></script>
     <script src="../utils/profileImage/src/profile-image.js"></script>
