--- a/public/chatPage/index.html
+++ b/public/chatPage/index.html
@@ -16,7 +16,8 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Quicksand:wght@300..700&display=swap"
         rel="stylesheet">
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -35,65 +36,73 @@
         </form>
     </div>
 
+    <main class="chatroom-box">
+        <article id="memberAndMessages">
+            <section id="member-area">
 
-    <div id="memberAndMessages">
-        <div id="member-area">
+                <div class="list-title white-word">
+                    <div>Teammates</div>
+                </div>
 
-            <div class="list-title white-word">
-                <div>Teammates</div>
-            </div>
+                <div id="member-list" class="white-word">
 
-            <div id="member-list" class="white-word">
+                    <div class="member">
+                        <div class="username">username sample</div>
+                        <div class="image-cropper">
+                            <img src="01.jpg" class="profilePic" alt="karina">
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="username">username sample</div>
+                        <div class="image-cropper">
+                            <img src="/profile-image/mydog.jpg" class="profilePic" alt="karina">
+                        </div>
+                    </div>
 
-                <div class="member">
-                    <div class="username">username</div>
-                    <div class="image-cropper">
-                        <img src="01.jpg" class="profilePic" alt="karina">
+                </div>
+            </section>
+
+
+            <section id="message-list">
+
+                <div id="message-box">
+                    <div class="displayCreatedDate">
+                        <div>2024-04-16</div>
+                    </div>
+                    <div class="message">
+                        <span class="username">user 1</span>
+                        <span class="content">message bbbbbbbbbbbbbbbbbb</span>
+                        <span class="create-time">13:06</span>
+                    </div>
+                    <div class="message myMessage">
+                        <span class="content">message ccccccccccccc</span>
+                        <span class="create-time">13:08</span>
+                        <button class="edit-content">Edit</button>
                     </div>
                 </div>
-                <div class="member">
-                    <div class="username">username</div>
-                    <div class="image-cropper">
-                        <img src="/profile-image/mydog.jpg" class="profilePic" alt="karina">
-                    </div>
+
+
+                <div id="texting-box">
+                    <form id="sendMessage">
+                        <input type="text" name="text_content" id="text-content" class="text-content"
+                            placeholder="text something">
+                        <!-- <input type="submit" value="Send"> -->
+                        <button id="text-send" type="submit">Send</button>
+                    </form>
                 </div>
 
-            </div>
-        </div>
+            </section>    
+
+        </article>
+
+        <button type="button" id="quit-chat">Quit Chat</button>
+
+    </main>
 
 
-        <div id="message-list">
-
-            <div id="message-box">
-                <div class="displayCreatedDate">
-                    <div>2024-04-16</div>
-                </div>
-                <div class="message">
-                    <span class="username">user 1</span>
-                    <span class="content">message bbbbbbbbbbbbbbbbbb</span>
-                    <span class="create-time">13:06</span>
-                </div>
-                <div class="message myMessage">
-                    <span class="content">message ccccccccccccc</span>
-                    <span class="create-time">13:08</span>
-                    <button class="edit-content">Edit</button>
-                </div>
-            </div>
-
-
-            <div id="texting-box">
-                <form id="sendMessage">
-                    <input type="text" name="text_content" id="text-content" class="text-content"
-                        placeholder="text something">
-                    <!-- <input type="submit" value="Send"> -->
-                    <button id="text-send" type="submit">Send</button>
-                </form>
-            </div>
-
-        </div>
-
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
 </body>
