cm chatroom all finish

--- a/public/chatPage/index.html
+++ b/public/chatPage/index.html
@@ -47,15 +47,16 @@
                 <div id="member-list" class="white-word">
 
                     <div class="member">
-                        <div class="username">username sample</div>
+                        <div class="username">username1</div>
                         <div class="image-cropper">
                             <img src="01.jpg" class="profilePic" alt="karina">
                         </div>
                     </div>
                     <div class="member">
-                        <div class="username">username sample</div>
+                        <div class="username">username2</div>
                         <div class="image-cropper">
                             <img src="/profile-image/mydog.jpg" class="profilePic" alt="karina">
+                            <!-- <img src="./edit-text.png" class="profilePic" alt="karina"> -->
                         </div>
                     </div>
 
@@ -84,14 +85,13 @@
 
                 <div id="texting-box">
                     <form id="sendMessage">
-                        <input type="text" name="text_content" id="text-content" class="text-content"
-                            placeholder="text something">
-                        <!-- <input type="submit" value="Send"> -->
+                        <input type="text" name="text_content" id="text-content" class="text-content white-word"
+                            placeholder="|">
                         <button id="text-send" type="submit">Send</button>
                     </form>
                 </div>
 
-            </section>    
+            </section>
 
         </article>
 
