--- a/public/chatPage/index.html
+++ b/public/chatPage/index.html
@@ -85,8 +85,7 @@
 
                 <div id="texting-box">
                     <form id="sendMessage">
-                        <input type="text" name="text_content" id="text-content" class="text-content white-word"
-                            placeholder="|">
+                        <input type="text" name="text_content" id="text-content" class="text-content white-word">
                         <button id="text-send" type="submit">Send</button>
                     </form>
                 </div>
