user task relation almost done

--- a/public/ProjectPage/index.html
+++ b/public/ProjectPage/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" type="text/css">
     <script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script>
+
 </head>
 
 <body>
@@ -22,7 +23,7 @@
     </div>
 
     <div class="jira border">
-        <div class="to-do-list border task_list">
+        <div class="to-do-list border">
             <h4>To Do List</h4>
         </div>
         <div class="ongoing border">
@@ -32,7 +33,7 @@
             <h4>Finished</h4>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="index.js"></script>
 </body>
 
