--- a/public/chatPage/index.html
+++ b/public/chatPage/index.html
@@ -18,6 +18,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="css/perfect-scrollbar.css"> -->
 </head>
 
 <body>
@@ -37,8 +39,8 @@
     </div>
 
     <main class="chatroom-box">
-        <article id="memberAndMessages">
-            <section id="member-area">
+        <article id="memberAndMessages" class="row">
+            <section id="member-area" class="col-2">
 
                 <div class="list-title white-word">
                     <div>Teammates</div>
@@ -64,7 +66,7 @@
             </section>
 
 
-            <section id="message-list">
+            <section id="message-list" class="col">
 
                 <div id="message-box">
                     <div class="displayCreatedDate">
@@ -102,6 +104,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- <script src="dist/perfect-scrollbar.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
 </body>
