project user relation on progress

--- a/public/ProjectPage/index.html
+++ b/public/ProjectPage/index.html
@@ -29,8 +29,10 @@
 
 
     <nav class="border">
+        <div class="add-teammate">Add Teammate</div>
+        <div class="remove-teammate">Remove Teammate</div>
+        <div class="quit-team">Quit Team</div>
         <div class="main-page">Main Page</div>
-        <div class="noti">Notification</div>
         <div class="logout">Logout</div>
     </nav>
 
