upload profile image not working

--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -156,7 +156,7 @@
                 </div>
     
                 <div class="modal-body p-5 pt-0">
-                    <form id="upload-profile-image">
+                    <form enctype="multipart/form-data" method="post" id="upload-profile-image">
     
                         <label for="profile-image-upload" class="form-label">Upload Image</label>
                         <input class="form-control" type="file" id="profile-image-upload">
