profile image upload button done, need bug fix

--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -159,7 +159,7 @@
                     <form enctype="multipart/form-data" method="post" id="upload-profile-image">
     
                         <label for="profile-image-upload" class="form-label">Upload Image</label>
-                        <input class="form-control" type="file" id="profile-image-upload">
+                        <input class="form-control" type="file" name="profile-image" id="profile-image-upload">
     
                         <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit"
                             id="submit-profile-image">Submit</button>
