cm finish user card

--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -93,6 +93,8 @@
         <button type="button" class="quit-chat">Quit Chat</button>
     </main>
     
+    <div class="outer-user-card"></div> 
+    <div class="user-card"></div>
 
     <button class="open-chatroom" type="button">Chatroom</button>
 
