--- a/private/chatPage/index.html
+++ b/private/chatPage/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet" />
-    
+
     <title>Chatroom Test</title>
 
 
@@ -85,10 +85,12 @@
 
 
                 <div id="texting-box">
+
                     <form id="sendMessage">
-                        <input type="text" name="text_content" id="text-content" class="text-content white-word">
-                        <button id="text-send" type="submit">Send</button>
+                        <input type="text" name="text_content" class="text-content white-word">
+                        <button class="text-send" type="submit">Send</button>
                     </form>
+
                 </div>
 
             </section>
@@ -98,6 +100,12 @@
         <button type="button" id="quit-chat">Quit Chat</button>
 
     </main>
+
+
+
+    <div class="outer-user-card"></div>
+    
+    <div class="user-card"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
