--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -55,6 +55,26 @@
 
 
 
+<div class="search-wrapper">
+    <label for="search">Search Users</label>
+    <input type="search" id="search">
+</div>
+<div class="user-cards">
+    <div class="card">
+        <div class="header">My Name</div>
+        <div class="body">email@gmail.com</div>
+    </div>
+    <div class="card">
+        <div class="header">My Name</div>
+        <div class="body">email@gmail.com</div>
+    </div>
+    <div class="card">
+        <div class="header">My Name</div>
+        <div class="body">email@gmail.com</div>
+    </div>
+</div>
+
+
 
     <main class="chatroom-box" style="display: none;">
         
@@ -106,6 +126,7 @@
 
 
     <script type="module" src="index.js"></script>
+    <script src="search.js"></script>
 </body>
 
 </html>
