finish btn and assign btn finish

--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -73,7 +73,7 @@
 
 
 
-    <section class="search-user-card">
+    <section class="search-user-card hide" >
         <div class="search-wrapper">
             <label for="search">Add User Search</label>
             <input type="search" id="search" placeholder="search user with username or email">
@@ -140,6 +140,7 @@
 
     <script type="module" src="index.js"></script>
     <script src="search.js"></script>
+    <script src="../../utils/profileImage/src/profile-image.js"></script>
 </body>
 
 </html>
