cm project page frontend 2

--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -40,16 +40,34 @@
         <article class="member-and-chart">
 
             <div class="team-member-list">
-                <div class="list-title">
-                    Member List
-                </div>
+                <div class="list-title white-word">Team Member</div>
                 <div class="all-team-member">
                     <div class="team-member">
-                        <div class="team-member-username"></div>
+                        <div class="team-member-username white-word">username</div>
                         <div class="image-cropper">
                             <img src="/profile-image/01.jpg" class="profilePic" alt="">
                         </div>
                     </div>
+                    <div class="team-member">
+                        <div class="team-member-username white-word">username</div>
+                        <div class="image-cropper">
+                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-member-username white-word">username</div>
+                        <div class="image-cropper">
+                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-member-username white-word">username</div>
+                        <div class="image-cropper">
+                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                        </div>
+                    </div>
+                    
+
                 </div>
             </div>
 
@@ -79,7 +97,7 @@
 
     </main>
 
-    <section class="search-user-card hide" >
+    <section class="search-user-card" >
         <div class="search-wrapper">
             <label for="search">Add User Search</label>
             <input type="search" id="search" placeholder="search user with username or email">
