cm project page frontend 3

--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -40,27 +40,9 @@
         <article class="member-and-chart">
 
             <div class="team-member-list">
-                <div class="member-list-yop-area">
+                <div class="member-list-area">
                     <div class="list-title white-word">Team Member</div>
                     <div class="all-team-member">
-                        <div class="team-member">
-                            <div class="team-member-username white-word">username</div>
-                            <div class="image-cropper">
-                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                            </div>
-                        </div>
-                        <div class="team-member">
-                            <div class="team-member-username white-word">username</div>
-                            <div class="image-cropper">
-                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                            </div>
-                        </div>
-                        <div class="team-member">
-                            <div class="team-member-username white-word">username</div>
-                            <div class="image-cropper">
-                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                            </div>
-                        </div>
                         <div class="team-member">
                             <div class="team-member-username white-word">username</div>
                             <div class="image-cropper">
@@ -74,26 +56,66 @@
             </div>
 
 
-            
-            <div class="main border">
 
-                <div class="right-side border">
-                    <section class="chart-container border">
+            <div class="chart-and-status">
+
+                <div class="right-side">
+
+                    <section class="chart-container">
                         <div id="gantt_here" style='width:100%; height:100%;'></div>
                     </section>
-                    <section class="task-container border">
-                        <div class="jira border">
-                            <div class="to-do-list border">
-                                <h4>To Do List</h4>
+
+                    <section class="task-container">
+                        <div class="jira row">
+
+
+                            <div class="to-do-list border col">
+
+                                <div class="inside-jira-title white-word">To Do List</div>
+
+                                <div class="inside-jira-task-box-to-do-list white-word">
+                                    <div class="inside-jira-task white-word">
+                                        <div class="task-name">aaaaaa</div>
+                                        <div class="task-any-fucking-icon">11111</div>
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="ongoing border">
-                                <h4>Ongoing</h4>
+
+
+
+                            <div class="ongoing border col">
+
+                                <div class="inside-jira-title white-word">Ongoing</div>
+
+                                <div class="inside-jira-task-box-ongoing white-word">
+                                    <div class="inside-jira-task white-word">
+                                        <div class="task-name">aaaaaa</div>
+                                        <div class="task-any-fucking-icon">11111</div>
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="finished border">
-                                <h4>Finished</h4>
+
+
+
+                            <div class="finished border col">
+
+                                <div class="inside-jira-title white-word">Finished</div>
+
+                                <div class="inside-jira-task-box-finished white-word">
+                                    <div class="inside-jira-task white-word">
+                                        <div class="task-name">aaaaaa</div>
+                                        <div class="task-any-fucking-icon">11111</div>
+                                    </div>
+                                </div>
+
                             </div>
+
+
                         </div>
                     </section>
+
                 </div>
             </div>
 
