cm finish 98% project page css

--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -43,16 +43,19 @@
                 <div class="member-list-area">
                     <div class="list-title white-word">Team Member</div>
                     <div class="all-team-member">
-                        <div class="team-member">
+                        <!-- <div class="team-member">
                             <div class="team-member-username white-word">username</div>
                             <div class="image-cropper">
                                 <img src="/profile-image/01.jpg" class="profilePic" alt="">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
-                <div class="team-member-button">Bill Start Here</div>
+                <div class="member-button-list">
+                    <button class="member-list-button add-member white-word" type="button">Add Member</button>
+                    <button class="member-list-button open-chatroom white-word" type="button">Chatroom</button>
+                </div>
             </div>
 
 
@@ -68,48 +71,38 @@
                     <section class="task-container">
                         <div class="jira row">
 
-
-                            <div class="to-do-list border col">
-
+                            <div class="to-do-list col">
                                 <div class="inside-jira-title white-word">To Do List</div>
-
                                 <div class="inside-jira-task-box-to-do-list white-word">
-                                    <div class="inside-jira-task white-word">
+                                    <!-- <div class="inside-jira-task white-word">
                                         <div class="task-name">aaaaaa</div>
                                         <div class="task-any-fucking-icon">11111</div>
-                                    </div>
+                                    </div> -->
                                 </div>
-
                             </div>
 
 
 
-                            <div class="ongoing border col">
-
+                            <div class="ongoing col">
                                 <div class="inside-jira-title white-word">Ongoing</div>
-
                                 <div class="inside-jira-task-box-ongoing white-word">
-                                    <div class="inside-jira-task white-word">
+                                    <!-- <div class="inside-jira-task white-word">
                                         <div class="task-name">aaaaaa</div>
                                         <div class="task-any-fucking-icon">11111</div>
-                                    </div>
+                                    </div> -->
                                 </div>
-
                             </div>
 
 
 
-                            <div class="finished border col">
-
+                            <div class="finished col">
                                 <div class="inside-jira-title white-word">Finished</div>
-
                                 <div class="inside-jira-task-box-finished white-word">
-                                    <div class="inside-jira-task white-word">
+                                    <!-- <div class="inside-jira-task white-word">
                                         <div class="task-name">aaaaaa</div>
                                         <div class="task-any-fucking-icon">11111</div>
-                                    </div>
+                                    </div> -->
                                 </div>
-
                             </div>
 
 
@@ -123,14 +116,14 @@
 
     </main>
 
+
     <section class="search-user-card">
         <div class="search-wrapper">
             <label for="search">Add User Search</label>
             <input type="search" id="search" placeholder="search user with username or email">
         </div>
         <div class="user-info-list">
-            <div class="user-info-card">
-            </div>
+            <!-- <div class="user-info-card"></div> -->
         </div>
     </section>
 
@@ -165,7 +158,7 @@
     <div class="outer-user-card"></div>
     <div class="user-card"></div>
 
-    <button class="open-chatroom" type="button">Chatroom</button>
+
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
