cm main page css

--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -82,7 +82,7 @@
                 </section>
 
                 <section class="completed-project-area">
-
+                    <div class="completed-project-title">Completed Projects</div>
                     <!-- more display will be run in js -->
 
                 </section>
