update project page swal buttons

--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -25,15 +25,14 @@
 
     <main class="darken-area" style="display: none;"></main>
 
-
     <main id="project-page-area">
-
 
         <nav class="top-bar">
 
             <div class="main-page white-word">Main Page</div>
             <div class="project-big-name white-word">Project Name</div>
             <div class="logout white-word">Logout</div>
+            
         </nav>
 
         <article class="member-and-chart">
@@ -52,8 +51,8 @@
                 </div>
 
                 <div class="member-button-list">
-                    <button class="member-list-button add-member white-word" type="button">Add Member</button>
-                    <button class="member-list-button open-chatroom white-word" type="button">Chatroom</button>
+                    <button class="member-list-button add-member" type="button">Add Member</button>
+                    <button class="member-list-button open-chatroom" type="button">Chatroom</button>
                 </div>
             </div>
 
@@ -122,7 +121,7 @@
             <input type="search" id="search" placeholder="search user with username or email">
         </div>
         <div class="user-info-list">
-            <!-- <div class="user-info-card"></div> -->
+            <!-- contents to be displayed by js -->
         </div>
     </section>
 
@@ -167,7 +166,7 @@
 
 
     <script type="module" src="index.js"></script>
-    <script src="search.js"></script>
+    <script type="module" src="search.js"></script>
     <script src="../../utils/profileImage/src/profile-image.js"></script>
 </body>
 
