update add user to project us

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
                         <div class="form-floating mb-3">
                             <input type="password" class="form-control rounded-3 " id="password" placeholder="password"
-                                value="1234">
+                                value="!1Qwertyuiop">
                             <label for="password">Password</label>
                         </div>
 
