--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -27,7 +27,9 @@
         <main id="main-page-area">
 
             <nav id="top-bar" class="row white-word">
-                <div class="main-page white-word" class="col-2" onclick="window.location.reload()">Main Page</div>
+                <div class="main-page" class="col-2" onclick="window.location.reload()">
+                    <img src="andthen_logo_6.png" alt="" class="logo">
+                </div>
                 <div id="notification" class="col-8"></div>
                 <div class="logout white-word" id="logout-button" class="col-2">Logout</div>
             </nav>
