--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -29,7 +29,7 @@
 
         <nav class="top-bar">
 
-            <div class="main-page white-word">Main Page</div>
+            <div class="main-page"><img src="andthen_logo_6.png" alt="" class="logo"></div>
             <div class="project-big-name white-word">Project Name</div>
             <div class="logout white-word">Logout</div>
             
